// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Auctions|AuctionsList default 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky MuiListSubheader-gutters AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        Array [
          <div>
            <button
              aria-label="Create Auction"
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>,
          "",
        ]
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Laborum cupiditate
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Kassulke.Alba
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Aut iure nemo
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Boyle.Darien
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Mollitia est et
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Ashton.Maggio
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Vel velit
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Merle_Reynolds
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;

exports[`Storyshots Auctions|AuctionsList loading 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky MuiListSubheader-gutters AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        Array [
          <div>
            <button
              aria-label="Create Auction"
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>,
          "",
        ]
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiGrid-container MuiGrid-justify-xs-center"
  >
    <div
      className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</ul>
`;

exports[`Storyshots Auctions|AuctionsList no auctions 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky MuiListSubheader-gutters AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        Array [
          <div>
            <button
              aria-label="Create Auction"
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>,
          "",
        ]
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <li
    className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemText-root AuctionsList-emptyListItemText"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        No auctions available
      </span>
    </div>
  </li>
</ul>
`;
